--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -16,7 +16,7 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img src="../../../assets/hamburguesas.jpg" alt="Imagen de hamburguesas"
+                    <img src="../../../assets/products/hamburguesas.webp" alt="Imagen de hamburguesas"
                         class="hamburguesas img-fluid rounded" />
                 </div>
             </div>
@@ -31,7 +31,7 @@
                         de las raciones que tenemos en la carta.
                     </p>
                     <div class="text-center">
-                        <img src="../../../assets/anteux.jpg" alt="Imagen de hamburguesa Anteux"
+                        <img src="../../../assets/products/anteux.webp" alt="Imagen de hamburguesa Anteux"
                             class="burguer img-fluid rounded center mb-4" />
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                         Anteux Burger!
                     </p>
                     <div class="tortitas">
-                        <img src="../../../assets/tortitas.jpg" alt="Imagen de tortitas"
+                        <img src="../../../assets/products/tortitas.webp" alt="Imagen de tortitas"
                             class="postre img-fluid rounded mb-4" />
                     </div>
                 </div>
