haciendo pruebas de rendimiento

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -34,6 +34,11 @@
     color: white;
   }
 
+  .hamburguesas {
+    width: 100%;
+    height: auto;
+  }
+
   .burguer {
     width: 60%;
     height: auto;
@@ -41,6 +46,8 @@
   }
 
   .postre {
+    width: 100%;
+    height: auto;
     margin: 1rem 0 2rem 0;
   }
 
