--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -10,7 +10,7 @@
       <div class="logo">
         <a [routerLink]="['/inicio']">
           <div class="img-logo">
-            <img src="../../../assets/products/logoblanco.webp" alt="Logo web" />
+            <img ngSrc="../../../assets/products/logoblanco.webp" alt="Logo web" width="50" height="50" />
           </div>
         </a>
       </div>
