--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="content">
         <div class="container">
             <div class="imagen">
-                <img src="../../../assets/products/logoblanco.webp" alt="logo" class="logo">
+                <img ngSrc="../../../assets/products/logoblanco.webp" alt="logo" class="logo" width="30" height="30">
             </div>
             <div class="title">
                 <h1> Donde nacen las mejores hamburguesas</h1>
