--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -16,8 +16,8 @@
                     </p>
                 </div>
                 <div class="col-md-6">
-                    <img ngSrc="../../../assets/products/hamburguesas.webp" alt="Imagen de hamburguesas"
-                        class="hamburguesas img-fluid rounded" width="100" height="100" />
+                    <img src="../../../assets/products/hamburguesas.webp" alt="Imagen de hamburguesas"
+                        class="hamburguesas img-fluid rounded"/>
                 </div>
             </div>
 
@@ -31,8 +31,8 @@
                         de las raciones que tenemos en la carta.
                     </p>
                     <div class="text-center">
-                        <img ngSrc="../../../assets/products/anteux.webp" alt="Imagen de hamburguesa Anteux"
-                            class="burguer img-fluid rounded center mb-4" width="100" height="100" />
+                        <img src="../../../assets/products/anteux.webp" alt="Imagen de hamburguesa Anteux"
+                            class="burguer img-fluid rounded center mb-4"/>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -44,8 +44,8 @@
                         Anteux Burger!
                     </p>
                     <div class="tortitas">
-                        <img ngSrc="../../../assets/products/tortitas.webp" alt="Imagen de tortitas"
-                            class="postre img-fluid rounded mb-4" width="100" height="100" />
+                        <img src="../../../assets/products/tortitas.webp" alt="Imagen de tortitas"
+                            class="postre img-fluid rounded mb-4"/>
                     </div>
                 </div>
             </div>
