--- a/src/app/pages/pedido/pedido.component.html
+++ b/src/app/pages/pedido/pedido.component.html
@@ -16,7 +16,7 @@
       </div>
       <mat-list-item class="date">
         <span class="state"> Estado:</span><span [ngStyle]="{'color': getColorForState(order.state)}">
-          {{ order.state }}</span>
+          {{ getOrderState(order.state) }}</span>
       </mat-list-item>
     </mat-list>
     <div class="repetirPedido">
